--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Welcome to Vuetify</title>
+    <title>Recipes App</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
+    <link href='/public/font-awesome-4.7.0/css/font-awesome.min.css' rel="stylesheet" type="text/css">
     <link rel="icon" type="image/png" href="/public/favicon-32x32.png" sizes="32x32">
   </head>
   <body>
